--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,14 @@
 Package: SGL
 Type: Package
-Title: Fit a GLM (or cox model) with a combination of lasso and group
-        lasso regularization
-Version: 1.1
+Title: Fit a GLM (or cox model) with a combination of lasso and group lasso regularization
+Version: 0.1
 Date: 2010-10-12
 Author: Noah Simon, Jerome Friedman, Trevor Hastie, and Rob Tibshirani, Wesley Brooks
 Maintainer: Wesley Brooks <wrbrooks@uwalumni.com>
 Description: Fit a regularized generalized linear model via penalized
         maximum likelihood.  The model is fit for a path of values of
         the penalty parameter. Fits linear, logistic and Cox models.
-License: GPL
+License: MIT
 LazyLoad: yes
 Packaged: 2013-04-02 17:43:37 UTC; nsimon
 Repository: CRAN
